--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-streamlit
-langchain
-langchain-community
-langchain-openai
-unstructured[all-docs]
-faiss-cpu
-sentence-transformers
-pandas
-openai
+streamlit>=1.28.0
+langchain>=0.0.300
+langchain-community>=0.0.13
+langchain-openai>=0.0.2
+unstructured[all-docs]>=0.10.0
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
+pandas>=1.5.3
+openai>=1.0.0
+pypdf>=3.15.0
+openpyxl>=3.1.0
